chore(logger): use standard ProcessHandle to resolve current JVM process PID
Replaced the hardcoded '001' placeholder inside the internal log format
with the standard standard library mechanism to fetch the real current JVM
process PID.

This removes legacy TODO comments and ensures that AndroidLogViewer's internal
diagnostic logs mirror real systems formatting correctly.

Changes:
- Replaced the hardcoded String PID with \ProcessHandle.current().pid()\.
- Removed the deprecated/legacy TODO comment inside \Logger.java\.
- Verified build and test suite compatibility on JDK 21.