@@ -90,8 +90,8 @@ public class Logger {
 
     String levelIndicator = level.name().substring(0, 1).toUpperCase();
     DecimalFormat tidFormat = new DecimalFormat("000");
-    String tid = tidFormat.format(Thread.currentThread().getId());
-    String pid = "001"; // TODO use the real PID one day if needed
+    String tid = tidFormat.format(Thread.currentThread().threadId());
+    String pid = String.valueOf(ProcessHandle.current().pid());
 
     String logMessage = date + " " + pid + " " + tid + " " + levelIndicator + " " + getCallingClassName() + ": " + message;
     if (level == LogLevelConfig.Level.WARNING || level == LogLevelConfig.Level.ERROR) {
